--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,9 @@ on: [push, pull_request_target, issues]
 
 jobs:
   greeting:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24
     steps:
       - uses: actions/checkout@master
+      - run: rm -rf /usr/local /opt/
       - uses: lhotari/action-upterm@v1
       
