--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@master
-      - run: rm -rf /usr/local /opt/
+      - run: sudo rm -rf /usr/local /opt/
       - uses: lhotari/action-upterm@v1
       
